test/test_examples/syntactic_examples/syntax_error/error_fun_def_07.zig
// Syntax error: missing return type

const ifj = @import("ifj24.zig"); 

pub fn main() {

}  